--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "convertanarray",
-  "version": "1.0.0",
+  "name": "convert-an-array",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
